# minelegends

./: Anchor.toml  HANDOFF.md  README.md
docs/airdrop/: AIRDROP_PLAN.md
docs/game-design/: GDD.md
docs/lore/: LORE.md
docs/marketing/discord/: SERVER_STRUCTURE.md
docs/marketing/twitter/: CONTENT_CALENDAR.md
docs/reference/: anchor-solana-cli.md  git-workflow.md  grep-cheatsheet.md  rust-anchor-cheatsheet.md  tokenomics-calculator.md
docs/roadmap/: ROADMAP.md
docs/whitepaper/: WHITEPAPER.md
programs/veinlegends/: Cargo.toml  README.md
programs/veinlegends/src/: constants.rs  errors.rs  lib.rs  state.rs
tests/: veinlegends.ts
web/: .env.example  README.md  next.config.js  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/arena/: page.tsx
web/app/battle/: page.tsx
web/app/breed/: page.tsx
web/app/dashboard/: page.tsx
web/app/market/: page.tsx
web/app/mining/: page.tsx
web/app/quests/: page.tsx
web/app/roadmap/: page.tsx
web/app/swap/: page.tsx
web/app/tournament/: page.tsx
web/app/whitepaper/: page.tsx
web/components/: BreedSimulator.tsx  CTA.tsx  CharacterArt.tsx  CharacterCard.tsx  Characters.tsx  Footer.tsx  Gameplay.tsx  Hero.tsx  HeroCard.tsx  Lore.tsx  Navbar.tsx  PageLayout.tsx  Stats.tsx  Tokenomics.tsx
web/lib/: characters.ts  parts.ts  program.ts  wallet-provider-inner.tsx  wallet-provider.tsx
web/public/: dashboard.html
web/public/docs/: TOKENOMICS.md
