[package]
name = "veinlegends"
version = "0.1.0"
description = "VeinLegends - Web3 idle RPG on Solana with $VEIN token"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "veinlegends"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = "0.31.0"
